--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -6,35 +6,36 @@
         <div class="row">
             <div class="col-8 offset-2">
                 <h3>Edit this listing</h3><br>
-                    <form action="/listings/<%=listing._id%>?_method=PUT" method="POST">
+                    <form action="/listings/<%=listing._id%>?_method=PUT" method="POST" class="needs-validation">
                     <div>
                         <label for="title" class="form-label">Title</label>
-                        <input type="text" class="form-control" name="listing[title]" value="<%=listing.title%>"><br>
+                        <input type="text" class="form-control" name="listing[title]" value="<%=listing.title%>" required><br>
+                        <div class="invalid-feedback">Invalid Title</div>
                     </div>
                     <div>
                         <label for="description" class="form-label">Description</label>
                         <textarea name="listing[description]" class="form-control" cols="20"
-                            rows="2"><%=listing.description%></textarea><br>
+                            rows="2" required><%=listing.description%></textarea><br>
                     </div>
                     <div>
                         <label for="image" class="form-label">Image URL</label>
-                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image%>"><br>
+                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image%>" required><br>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
                             <label for="price" class="form-label">Price</label>
-                            <input type="number" class="form-control" name="listing[price]" value="<%=listing.price%>"><br>
+                            <input type="number" class="form-control" name="listing[price]" value="<%=listing.price%>" required><br>
                         </div>
                         <div class="col-md-8">
                             <label for="location" class="form-label">Location</label>
                             <input type="text" class="form-control" name="listing[location]"
-                                value="<%=listing.location%>"><br>
+                                value="<%=listing.location%>" required><br>
                         </div>
                     </div>
                     <div>
                         <label for="country" class="form-label">Country</label>
                         <input type="text" class="form-control" name="listing[country]"
-                            value="<%=listing.country%>"><br>
+                            value="<%=listing.country%>" required><br>
                     </div>
                     <button class="btn btn-dark">OK</button><br><br>
                 </div>
