--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -6,39 +6,48 @@
         <div class="row">
             <div class="col-8 offset-2">
                 <h3>Edit this listing</h3><br>
-                    <form action="/listings/<%=listing._id%>?_method=PUT" method="POST" class="needs-validation">
+                <form action="/listings/<%=listing._id%>?_method=PUT" method="POST" class="needs-validation" novalidate>
                     <div>
                         <label for="title" class="form-label">Title</label>
-                        <input type="text" class="form-control" name="listing[title]" value="<%=listing.title%>" required><br>
+                        <input type="text" class="form-control" name="listing[title]" value="<%=listing.title%>"
+                            required>
+                        <div class="invalid-feedback">Invalid Title</div> <br>
                         <div class="invalid-feedback">Invalid Title</div>
                     </div>
                     <div>
                         <label for="description" class="form-label">Description</label>
-                        <textarea name="listing[description]" class="form-control" cols="20"
-                            rows="2" required><%=listing.description%></textarea><br>
+                        <textarea name="listing[description]" class="form-control" cols="20" rows="2"
+                            required><%=listing.description%></textarea>
+                        <div class="invalid-feedback">Invalid Description</div> <br>
                     </div>
                     <div>
                         <label for="image" class="form-label">Image URL</label>
-                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image%>" required><br>
+                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image%>"
+                            required>
+                        <div class="invalid-feedback">Invalid URL</div> <br>
                     </div>
                     <div class="row">
                         <div class="col-md-4">
                             <label for="price" class="form-label">Price</label>
-                            <input type="number" class="form-control" name="listing[price]" value="<%=listing.price%>" required><br>
+                            <input type="number" class="form-control" name="listing[price]" value="<%=listing.price%>"
+                                required>
+                            <div class="invalid-feedback">Invalid Price</div> <br>
                         </div>
                         <div class="col-md-8">
                             <label for="location" class="form-label">Location</label>
                             <input type="text" class="form-control" name="listing[location]"
-                                value="<%=listing.location%>" required><br>
+                                value="<%=listing.location%>" required>
+                            <div class="invalid-feedback">Invalid Location</div> <br>
                         </div>
                     </div>
                     <div>
                         <label for="country" class="form-label">Country</label>
-                        <input type="text" class="form-control" name="listing[country]"
-                            value="<%=listing.country%>" required><br>
+                        <input type="text" class="form-control" name="listing[country]" value="<%=listing.country%>"
+                            required>
+                        <div class="invalid-feedback">Invalid Country</div> <br>
                     </div>
                     <button class="btn btn-dark">OK</button><br><br>
-                </div>
             </div>
+        </div>
         </form>
     </body>
