--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,6 @@
 <%-layout("/layouts/boilerplate")%>
-
     <body>
-        <h2>All Listings</h2>
+        <br><h2>All Listings</h2><br>
         <!-- <form action="/listings/new" method="get"><button>Add new listing</button></form> -->
         <ul>
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
