--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -11,14 +11,15 @@
                         <label for="title" class="form-label">Title</label>
                         <input type="text" class="form-control" name="listing[title]" value="<%=listing.title%>"
                             required>
-                        <div class="invalid-feedback">Invalid Title</div> <br>
                         <div class="invalid-feedback">Invalid Title</div>
+                        <div class="valid-feedback">Title looks good!</div> <br>
                     </div>
                     <div>
                         <label for="description" class="form-label">Description</label>
                         <textarea name="listing[description]" class="form-control" cols="20" rows="2"
                             required><%=listing.description%></textarea>
-                        <div class="invalid-feedback">Invalid Description</div> <br>
+                        <div class="invalid-feedback">Invalid Description</div>
+                        <div class="valid-feedback">Nice Description!</div> <br>
                     </div>
                     <div>
                         <label for="image" class="form-label">Image URL</label>
@@ -37,14 +38,16 @@
                             <label for="location" class="form-label">Location</label>
                             <input type="text" class="form-control" name="listing[location]"
                                 value="<%=listing.location%>" required>
-                            <div class="invalid-feedback">Invalid Location</div> <br>
+                            <div class="invalid-feedback">Invalid Location</div>
+                            <div class="valid-feedback">What a Location!</div> <br>
                         </div>
                     </div>
                     <div>
                         <label for="country" class="form-label">Country</label>
                         <input type="text" class="form-control" name="listing[country]" value="<%=listing.country%>"
                             required>
-                        <div class="invalid-feedback">Invalid Country</div> <br>
+                        <div class="invalid-feedback">Invalid Country</div>
+                        <div class="valid-feedback">Wow!</div><br>
                     </div>
                     <button class="btn btn-dark">OK</button><br><br>
             </div>
