--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -10,13 +10,15 @@
                         <label for="title" class="form-label">Title</label>
                         <input type="text" class="form-control" name="listing[title]" placeholder="enter title"
                             required>
-                        <div class="invalid-feedback">Invalid Title</div><br>
+                        <div class="invalid-feedback">Invalid Title</div>
+                        <div class="valid-feedback">Title looks good!</div><br>
                     </div>
                     <div>
                         <label for="description" class="form-label">Description</label>
                         <textarea name="listing[description]" class="form-control" cols="20" rows="2"
                             placeholder="enter description" required></textarea>
-                        <div class="invalid-feedback">Invalid Description</div><br>
+                        <div class="invalid-feedback">Invalid Description</div>
+                        <div class="valid-feedback">Nice Description!</div><br>
                     </div>
                     <div>
                         <label for="image" class="form-label">Image URL</label>
@@ -27,7 +29,7 @@
                     <div class="row">
                         <div class="col-md-4">
                             <label for="price" class="form-label">Price</label>
-                            <input type="number" class="form-control" name="listing[price]" placeholder="enter price"
+                            <input class="form-control" name="listing[price]" placeholder="enter price"
                                 required>
                             <div class="invalid-feedback">Invalid Price</div><br>
                         </div>
@@ -35,14 +37,16 @@
                             <label for="location" class="form-label">Location</label>
                             <input type="text" class="form-control" name="listing[location]"
                                 placeholder="enter location" required>
-                            <div class="invalid-feedback">Invalid Location</div><br>
+                            <div class="invalid-feedback">Invalid Location</div>
+                            <div class="valid-feedback">What a Location!</div><br>
                         </div>
                     </div>
                     <div>
                         <label for="country" class="form-label">Country</label>
                         <input type="text" class="form-control" name="listing[country]" placeholder="enter country"
                             required>
-                        <div class="invalid-feedback">Invalid Country</div><br>
+                        <div class="invalid-feedback">Invalid Country</div>
+                        <div class="valid-feedback">Wow!</div><br>
                     </div>
                     <button class="btn btn-dark">OK</button><br><br>
                 </form>
