--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -25,4 +25,31 @@
                 <button class="btn btn-dark offset-4 del-btn">Delete</button>
             </form>
         </div><br><br>
+        <div class="col-6 offset-4">
+            <hr>
+            <h4>Leave a Review</h4>
+            <form action="/listings/<%=listing._id%>/reviews" method="POST" novalidate class="needs-validation">
+                <div class="mb-3 mt-3">
+                    <label for="rating">Rating</label>
+                    <input class="form-range" type="range" name="review[rating]" min="1" max="5" value="1" id="rating">
+                </div>
+                <div class="mb-3 mt-3">
+                    <label class="form-label" for="comment">Comment</label>
+                    <textarea placeholder="Leave a review" class="form-control" name="review[comment]" id="comment"
+                        required></textarea>
+                    <div class="invalid-feedback">Review can't be empty.</div>
+                    <div class="valid-feedback">Thanks for the review</div>
+                </div>
+                <button class="mb-3 btn btn-outline-dark">Submit</button>
+            </form>
+            <hr>
+            <h4>All Reviews</h4>
+            <ul>
+                <% for(review of listing.reviews){%>
+                    <li>
+                        <%=review.rating%>★ <%=review.comment%>
+                    </li>
+                <%}%>
+            </ul>
+        </div>
     </body>
