--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ body{
     opacity: 0.7;
 }
 
-.btn{
+.ed-btn{
     background-color: #ef233c !important;
     border: none !important;
 }
@@ -86,4 +86,7 @@ body{
 }
 .del-btn{
     background-color: #2b2d42 !important;
+}
+.review-card{
+    height: auto !important;
 }
