--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -11,16 +11,16 @@
                     <div class="card-body">
                         <p class="card-text">
                             <%=listing.description%><br>
-                            ₹<%=listing.price.toLocaleString("en-IN")%> /night<br>
-                            <%=listing.location%><br>
-                            <%=listing.country%><br><br><br>
+                                ₹<%=listing.price.toLocaleString("en-IN")%> /night<br>
+                                    <%=listing.location%><br>
+                                        <%=listing.country%><br><br><br>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="btns">
-            <a class="btn btn-dark offset-4" href="/listings/<%=listing._id%>/edit">Edit</a>
+            <a class="btn ed-btn btn-dark offset-4" href="/listings/<%=listing._id%>/edit">Edit</a>
             <form action="/listings/<%=listing._id%>/?_method=DELETE" method="POST">
                 <button class="btn btn-dark offset-4 del-btn">Delete</button>
             </form>
@@ -44,12 +44,21 @@
             </form>
             <hr>
             <h4>All Reviews</h4>
-            <ul>
-                <% for(review of listing.reviews){%>
-                    <li>
-                        <%=review.rating%>★ <%=review.comment%>
-                    </li>
-                <%}%>
-            </ul>
+            <% for(review of listing.reviews){%>
+                <div class="card review-card">
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                            <p>
+                                <%=review.rating%>★ <%=review.comment%>
+                            </p>
+                            <footer class="blockquote-footer">A review by someone in <cite title="Source Title">
+                                    <%=listing.title%>
+                        </blockquote>
+                        <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>/?_method=DELETE" method="POST">
+                            <button class="btn btn-light btn-sm">Delete</button>
+                        </form>
+                    </div>
+                </div>
+            <%}%>
         </div>
     </body>
