--- a/classroom/views/page.ejs
+++ b/classroom/views/page.ejs
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
+    <%=success%>
+    <%=failure%>
+    <h1>Hello, <%=name%></h1>
 </body>
 </html>
