--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,6 +11,15 @@
                 <a class="nav-link" href="/listings">All Listings</a>
                 <a class="nav-link" href="/listings/new">Add new Listing</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <%if(!currentUser){%>
+                    <a class="nav-link" aria-current="page" href="/signup">SignUp</a>
+                    <a class="nav-link" href="/login">Log in</a>
+                    <%}%>
+                    <%if(currentUser){%>
+                        <a class="nav-link" href="/logout">Log out</a>
+                    <%}%>
+            </div>
         </div>
     </div>
 </nav>
