--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -10,21 +10,24 @@
                     <img src="<%=listing.image%>" class="card-img-top" style="height: 20rem;" alt="...">
                     <div class="card-body">
                         <p class="card-text">
+                            Owned by: <i><%=listing.owner.username%></i><br>
                             <%=listing.description%><br>
-                                ₹<%=listing.price.toLocaleString("en-IN")%> /night<br>
-                                    <%=listing.location%><br>
-                                        <%=listing.country%><br><br><br>
+                            ₹<%=listing.price.toLocaleString("en-IN")%> /night<br>
+                            <%=listing.location%><br>
+                            <%=listing.country%><br><br><br>
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+        
         <div class="btns">
             <a class="btn ed-btn btn-dark offset-4" href="/listings/<%=listing._id%>/edit">Edit</a>
             <form action="/listings/<%=listing._id%>/?_method=DELETE" method="POST">
                 <button class="btn btn-dark offset-4 del-btn">Delete</button>
             </form>
         </div><br><br>
+   
         <div class="col-6 offset-4">
             <hr>
             <h4>Leave a Review</h4>
