--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,16 +20,18 @@
                 </div>
             </div>
         </div>
-        
+        <%if(currentUser && listing.owner._id.equals(currentUser._id)){%>
         <div class="btns">
             <a class="btn ed-btn btn-dark offset-4" href="/listings/<%=listing._id%>/edit">Edit</a>
             <form action="/listings/<%=listing._id%>/?_method=DELETE" method="POST">
                 <button class="btn btn-dark offset-4 del-btn">Delete</button>
             </form>
         </div><br><br>
+        <%}%>
    
         <div class="col-6 offset-4">
             <hr>
+            <%if(currentUser){%>
             <h4>Leave a Review</h4>
             <form action="/listings/<%=listing._id%>/reviews" method="POST" novalidate class="needs-validation">
                 <div class="mb-3 mt-3">
@@ -46,6 +48,7 @@
                 <button class="mb-3 btn btn-outline-dark">Submit</button>
             </form>
             <hr>
+            <%}%>
             <h4>All Reviews</h4>
             <% for(review of listing.reviews){%>
                 <div class="card review-card">
@@ -54,7 +57,7 @@
                             <p>
                                 <%=review.rating%>★ <%=review.comment%>
                             </p>
-                            <footer class="blockquote-footer">A review by someone in <cite title="Source Title">
+                            <footer class="blockquote-footer">A review by @<%=review.author.username%> in <cite title="Source Title">
                                     <%=listing.title%>
                         </blockquote>
                         <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>/?_method=DELETE" method="POST">
