--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -23,7 +23,7 @@
                     </div>
                     <div>
                         <label for="image" class="form-label">Image URL</label>
-                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image%>"
+                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image.url%>"
                             required>
                         <div class="invalid-feedback">Invalid URL</div> <br>
                     </div>
