--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
                 <%for(listing of allListings){%>
                     <a href="/listings/<%=listing._id%>" class="listing-link">
                         <div class="card" style="width: 23rem;">
-                            <img src="<%=listing.image%>" class="card-img-top" style="height: 20rem;" alt="...">
+                            <img src="<%=listing.image.url%>" class="card-img-top" style="height: 20rem;" alt="...">
                             <div class="card-body">
                                 <p class="card-text">
                                     <b><%=listing.title%></b> <br>
