--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,7 +7,7 @@
                     <%=listing.title%>
                 </h3>
                 <div class="card show-card" style="width: 25rem;">
-                    <img src="<%=listing.image%>" class="card-img-top" style="height: 20rem;" alt="...">
+                    <img src="<%=listing.image.url%>" class="card-img-top" style="height: 20rem;" alt="...">
                     <div class="card-body">
                         <p class="card-text">
                             Owned by: <i><%=listing.owner.username%></i><br>
