--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -6,7 +6,8 @@
         <div class="row">
             <div class="col-8 offset-2">
                 <h3>Edit this listing</h3><br>
-                <form action="/listings/<%=listing._id%>?_method=PUT" method="POST" class="needs-validation" novalidate>
+                <form action="/listings/<%=listing._id%>?_method=PUT" method="POST" class="needs-validation"
+                    enctype="multipart/form-data" novalidate>
                     <div>
                         <label for="title" class="form-label">Title</label>
                         <input type="text" class="form-control" name="listing[title]" value="<%=listing.title%>"
@@ -22,10 +23,12 @@
                         <div class="valid-feedback">Nice Description!</div> <br>
                     </div>
                     <div>
-                        <label for="image" class="form-label">Image URL</label>
-                        <input type="text" class="form-control" name="listing[image]" value="<%=listing.image.url%>"
-                            required>
-                        <div class="invalid-feedback">Invalid URL</div> <br>
+                        Original Listing Image: <br>
+                        <img src="<%=originalImageUrl%>" alt="">
+                    </div>
+                    <div>
+                        <label for="image" class="form-label">Upload New Image</label>
+                        <input type="file" class="form-control" name="listing[image]">
                     </div>
                     <div class="row">
                         <div class="col-md-4">
