--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,5 +1,7 @@
 <%-layout("/layouts/boilerplate")%>
-
+<script>
+    let mapToken = "<%=process.env.MAP_TOKEN%>"
+</script>
     <body> <br><br>
         <div class="row">
             <div class="col-6 offset-4">
@@ -60,21 +62,32 @@
             </form>
             <hr>
             <%}%>
-            <h4>All Reviews</h4>
-            <% for(review of listing.reviews){%>
-                <div class="card review-card">
-                    <div class="card-body">
-                        <blockquote class="blockquote mb-0">
-                            <p><%=review.comment%></p>
-                            <p class="starability-result" data-rating="<%=review.rating%>"></p>
-                            <footer class="blockquote-footer">A review by @<%=review.author.username%> in <cite title="Source Title">
+            <% if(listing.reviews.length>0){ %>
+                <div class="row">
+                <h4>All Reviews</h4>
+                <% for(review of listing.reviews){%>
+                    <div class="card review-card">
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <p><%=review.comment%></p>
+                                <p class="starability-result" data-rating="<%=review.rating%>"></p>
+                                <footer class="blockquote-footer">A review by @<%=review.author.username%> in <cite title="Source Title">
                                     <%=listing.title%>
-                        </blockquote>
-                        <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>/?_method=DELETE" method="POST">
-                            <button class="btn btn-light btn-sm">Delete</button>
-                        </form>
+                            </blockquote>
+                            <form action="/listings/<%=listing._id%>/reviews/<%=review._id%>/?_method=DELETE" method="POST">
+                                <button class="btn btn-light btn-sm">Delete</button>
+                            </form>
+                        </div>
                     </div>
+                <%}%>
                 </div>
+                <hr>
             <%}%>
         </div>
+        <div class="col-6 offset-4">
+            <h3>Where you'll be...</h3>
+            <div id="map"></div>
+        </div>
     </body>
+
+    <script src="/js/map.js"></script>
