--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,48 +1,52 @@
-body{
+body {
     background-color: #EDF2F4 !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-.container{
+.container {
     flex: 1;
 }
 
-.navbar{
+.navbar {
     height: 5rem;
     background-color: #2B2D42 !important;
 }
 
-.fa-compass{
+.fa-compass {
     color: #ef233c;
     font-size: 2.5rem;
 }
 
-.nav-link{
+.nav-link {
     color: white !important;
 }
 
-.f-info-links a{
+.f-info-links a {
     text-decoration: none;
     color: #2b2d42;
 }
-.f-info-links a:hover{
+
+.f-info-links a:hover {
     text-decoration: underline;
 }
 
-.f-info-socials,.f-info-links, .f-info-brand{
+.f-info-socials,
+.f-info-links,
+.f-info-brand {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.f-info-socials i{
+
+.f-info-socials i {
     font-size: 1.2rem;
     margin: 0.75rem;
 }
 
-.f-info{
+.f-info {
     text-align: center;
     background-color: #8D99AE;
     height: 8rem;
@@ -51,7 +55,7 @@ body{
     justify-content: center;
 }
 
-.card{
+.card {
     border: none !important;
     margin-bottom: 2rem !important;
     height: 30rem !important;
@@ -59,34 +63,43 @@ body{
     /* background-color: #ff858d !important; */
 }
 
-.card-img-top{
+.card-img-top {
     /* width: 100% !important; */
     border-radius: 1rem;
 }
 
-.listing-link{
+.listing-link {
     text-decoration: none;
 }
 
-.card-img-top:hover{
+.card-img-top:hover {
     opacity: 0.7;
 }
 
-.ed-btn{
+.ed-btn {
     background-color: #ef233c !important;
     border: none !important;
 }
 
-.show-card{
+.show-card {
     height: 32rem !important;
 }
 
-.btns{
+.btns {
     display: flex;
 }
-.del-btn{
+
+.del-btn {
     background-color: #2b2d42 !important;
 }
-.review-card{
+
+.review-card {
     height: auto !important;
+}
+
+/* map */
+#map {
+    height: 400px;
+    width: 80vh;
+    margin: 40px 0px;
 }
