--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,6 +1,7 @@
 <%-layout("/layouts/boilerplate")%>
 <script>
-    let mapToken = "<%=process.env.MAP_TOKEN%>"
+    const mapToken = "<%=process.env.MAP_TOKEN%>"
+    const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>
 </script>
     <body> <br><br>
         <div class="row">
