--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -9,7 +9,7 @@
             }
             .filter{
                 text-align: center  ;
-                margin-right: 4.25rem;
+                margin-right: 2rem;
                 margin-top: 1rem;
                 opacity: 0.6;
             }
@@ -58,6 +58,12 @@
                 <p>Snow</p>
             </div>
         </div>
+        <div class="tax-toggle">
+            <div class="form-check-reverse form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Display total before taxes</label>
+              </div>
+        </div>
         <ul>
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
                 <%for(listing of allListings){%>
@@ -79,4 +85,10 @@
                     <%}%>
             </div>
         </ul>
+        <script>
+            let taxToggle = document.getElementById("flexSwitchCheckDefault")
+            taxToggle.addEventListener("click", ()=>{
+                console.log("clicked")
+            })
+        </script>
     </body>
