--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -17,6 +17,9 @@
                 opacity: 1;
                 cursor: pointer;
             }
+            .tax-info{
+                display: none;
+            }
         </style>
         <div id="filters">
             <div class="filter">
@@ -77,6 +80,7 @@
                                     </b> <br>
                                     <%=listing.description%> <br>
                                         <b>₹<%=listing.price.toLocaleString("en-IN")%> /night</b>
+                                        <i class="tax-info">+18% GST</i>
                                 </p>
                             </div>
                         </div>
@@ -89,6 +93,14 @@
             let taxToggle = document.getElementById("flexSwitchCheckDefault")
             taxToggle.addEventListener("click", ()=>{
                 console.log("clicked")
+                let taxInfo = document.getElementsByClassName("tax-info")
+                for(info of taxInfo){
+                    if(info.style.display != "inline"){
+                        info.style.display = "inline"
+                    } else{
+                        info.style.display = "none"
+                    }
+                }
             })
         </script>
     </body>
