--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,8 +4,10 @@
         <style>
             #filters{
                 display: flex;
+                align-items: center;
                 flex-wrap: wrap;
                 margin-left: 2rem;
+                width: auto;
             }
             .filter{
                 text-align: center  ;
@@ -19,6 +21,16 @@
             }
             .tax-info{
                 display: none;
+            }
+            .tax-toggle{
+                border: 1px solid black;
+                border-radius: 1rem;
+                width: 250px;
+                height: 3.35rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-left: 6.75rem;
             }
         </style>
         <div id="filters">
@@ -60,12 +72,12 @@
                 <div><i class="fa-solid fa-snowman"></i></div>
                 <p>Snow</p>
             </div>
-        </div>
-        <div class="tax-toggle">
-            <div class="form-check-reverse form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                <label class="form-check-label" for="flexSwitchCheckDefault">Display total before taxes</label>
-              </div>
+            <div class="tax-toggle">
+                <div class="form-check-reverse form-switch">
+                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Display total before taxes</label>
+                  </div>
+            </div>
         </div>
         <ul>
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
