--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,3 +1,26 @@
+<style>
+    .search-btn {
+        background-color: #ef233c;
+        color: white;
+        border-radius: 25px;
+        padding: 0 1rem;
+    }
+
+    .search-btn:hover {
+        background-color: #ef233c;
+        color: white;
+    }
+
+    .search-btn i {
+        display: inline;
+        margin-right: 0.5rem;
+    }
+    .search-input{
+        border-radius: 25px;
+        padding: 0.5rem 3rem;
+        font-size: 0.9rem;
+    }
+</style>
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
@@ -10,14 +33,20 @@
                 <a class="nav-link" href="/listings">Explore</a>
             </div>
             <div class="navbar-nav ms-auto">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2 search-input" type="search" placeholder="Search destinations">
+                    <button class="btn search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search</button>
+                </form>
+            </div>
+            <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="/listings/new">Aitrbnb your home</a>
                 <%if(!currentUser){%>
                     <a class="nav-link" aria-current="page" href="/signup"><b>SignUp</b></a>
                     <a class="nav-link" href="/login"><b>Log in</b></a>
-                <%}%>
-                <%if(currentUser){%>
-                    <a class="nav-link" href="/logout"><b>Log out</b></a>
-                <%}%>
+                    <%}%>
+                        <%if(currentUser){%>
+                            <a class="nav-link" href="/logout"><b>Log out</b></a>
+                            <%}%>
             </div>
         </div>
     </div>
